Tue Aug 26 11:33:30 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (nOE_element_def): fix error when cascade methods which
	  don't have arguments. Patch by Takeyuki Fujioka. [ruby-dev:35964]

	* lib/cgi.rb (blockquote): String#collect (this depends on
	  String#each) is no longer exists.
	  Patch by Takeyuki Fujioka. [ruby-dev:35946]

	* lib/cgi.rb (blockquote): ditto.

Tue Aug 26 03:06:48 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (make_writeconv): copy invalid/undef flags.

Tue Aug 26 02:47:08 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (dist): tool/make-snapshot is executable.

	* tool/make-snapshot (package): supported release numbers 1.9.0-x.

Tue Aug 26 02:43:50 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (rb_io_t): new field: writeconv_pre_opts.

	* io.c (make_writeconv): initialize writeconv_pre_opts.
	  (io_fwrite): use writeconv_pre_opts.

Tue Aug 26 01:48:31 2008  Tanaka Akira  <akr@fsij.org>

	* io.c: test _WIN32 for CRLF platform.  (cygwin defines O_BINARY.)

Tue Aug 26 01:29:26 2008  Tanaka Akira  <akr@fsij.org>

	* io.c: force CRLF handling if RUBY_TEST_CRLF_ENVIRONMENT is defined.
	  This is only for testing.

Tue Aug 26 01:26:31 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (str_transcode0): disable newline conversion for ASCII
	  incompatible encoding.

Tue Aug 26 00:55:46 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (str_transcode0): don't short cut for newline conversion.

Tue Aug 26 00:36:01 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fwrite): add TEXTMODE_NEWLINE_ENCODER to option for
	  rb_str_transcode.

Tue Aug 26 00:24:23 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_econv_exception): show readagain part for invalid
	  byte sequence exception.  store the part as an instance variable.
	  (ecerr_readagain_bytes): new method to access the readagain part.

Tue Aug 26 00:02:49 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (VpMult): fix double free.
