@@ -1,3 +1,8 @@
+Tue Aug 26 11:54:15 2008  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* test/cgi/test_cgi_tag_helper.rb: added by Takeyuki Fujioka.
+	  [ruby-dev:35971]
+
 Tue Aug 26 11:33:30 2008  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/cgi.rb (nOE_element_def): fix error when cascade methods which
